--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,7 @@
 							</div>
 						</div>
 					</fieldset>
+					<div class="recent-searches"></div>
 					<div class="form-group">
 						<button id="submit" class="btn btn-success btn-lg btn-block" type="submit">Search
 					</div>
@@ -36,6 +37,7 @@
 			</div>
 		</div>
 		<script src="./jquery-1.11.1.min.js" type="text/javascript"></script>
+		<script src="./popup-toolbelt.js" type="text/javascript"></script>
 		<script src="./popup.js" type="text/javascript"></script>
 	</body>
 </html>
